# deepFECG

./: dwtdf_mem_challenge.ipynb  raw_gcForest_usage.ipynb  rawl_of_dwtdf.ipynb
deep_fecg_research/: .gitignore  README.md  architecture.puml  main.py  pyproject.toml  requirements.txt  setup_and_test_all_in_one.ipynb
deep_fecg_research/notebooks/: dwtdf.ipynb  setup_and_test.ipynb  setup_and_test_all_in_one.ipynb
deep_fecg_research/src/explainability/: main.py
deep_fecg_research/src/features/: main.py
deep_fecg_research/src/models/: gcforest.py  main.py
deep_fecg_research/src/preprocessing/: main.py
